Revision history for {{$dist->name}}

{{$NEXT}}

0.03      2017-07-22 22:11:36 -0400
  - Remove dependency on File::HomeDir

0.02      2015-11-29 15:13:26 -0500
  - Improved diagnostics with test
  - Moved repository to clustericious org on github
    (updated meta appropriately)

0.01      2013-10-05 06:47:09 -0400
  - initial version