@@ -34,3 +34,4 @@ Role::Tiny = 0
 PlugAuth = 0.31
 
 [Author::Plicease::Upload]
+[Deprecated]
