@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Deprecated. See https://github.com/clustericious/Clustericious/issues/46
 
 0.03      2017-07-22 22:11:36 -0400
   - Remove dependency on File::HomeDir
